--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 
 <h5>this is how you make a pizza</h5>
-<p>there are some spesifics you need to take to make a pizza
- we will list them here</p>
+<p><small> are some spesifics you need to take to make a pizza
+ we will list them here</small></p>
 
 
 
@@ -61,7 +61,7 @@
  <ul>
     <li>pepperoni</li>
     <li>olives</li>
-    <li>peppers (never green)</li>
+    <li>peppers <strong>(never green)</strong></li>
     <li>mushrooms</li>
     <li>onions</li>
     <li>jalapenos</li>
