--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     <li>pineaple (if you are smart)</li>
     <li>bacon</li>
 
-
+<p>here is the <a href="https://en.wikipedia.org/wiki/pizza" target="_blank">wikipedia
+    article about pizza.</a></p>
 
 
  </ul>
