--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
     <li>mushrooms</li>
     <li>onions</li>
     <li>jalapenos</li>
-    <li>pineaple (if you are smart)</li>
+    <li>pineaple <em>(if you are smart)</em></li>
     <li>bacon</li>
 
 <p>here is the <a href="https://en.wikipedia.org/wiki/pizza" target="_blank">wikipedia
     article about pizza.</a></p>
+
+    <img src="images/pizza.jpg" alt="a picture of pizza"
 
 
  </ul>
