--- a/index.html
+++ b/index.html
@@ -26,29 +26,20 @@
 
 
 
-    <p>According to all known laws
+    <p class="special">According to all known laws
         of aviation,
-
-
         there is no way a bee
         should be able to fly.
-
-
         Its wings are too small to get
         its fat little body off the ground.
-
-
         The bee, of course, flies anyway
-
-
         because bees don't care
         what humans think is impossible.
-
     </p>
 
 
-    <h5>this is how you make a pizza</h5>
-    <p><small> are some spesifics you need to take to make a pizza
+    <h5 class="special">this is how you make a pizza</h5>
+    <p><small>  here are some spesifics you need to take to make a pizza
             we will list them here</small></p>
 
 
