--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         list them like this</h6>
 
     <ul>
-        <li>pepperoni</li>
+        <li class="fave">pepperoni</li>
         <li>olives</li>
         <li>peppers <strong>(never green)</strong></li>
         <li>mushrooms</li>
         <li>onions</li>
         <li>jalapenos</li>
-        <li>pineaple <em>(if you are smart)</em></li>
+        <li class="fave">pineaple <em>(if you are smart)</em></li>
         <li>bacon</li>
     </ul>
 
@@ -76,7 +76,14 @@
     <p>here is the <a href="https://en.wikipedia.org/wiki/pizza" target="_blank">wikipedia
             article about pizza.</a></p>
 
-    <img src="images/pizza.jpg" alt="a picture of pizza" >
+    <img class="pizza" src="images/pizza.jpg" alt="a picture of pizza" >
+
+
+
+
+
+    <h2>but wait theres something i love more than pizza <a href="cake.html"
+    target="_blank">its a cake</a></h2>
 
 </body>
 
